chore: fix styling on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,10 @@ h2 {
   line-height: 1.75rem; /* 28px */
 }
 
+section > h2 {
+  text-decoration: underline;
+}
+
 h3 {
   font-size: 1.125rem; /* 18px */
   line-height: 1.75rem; /* 28px */
